# historical-map

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  historical map.drawio  main.cpp
.github/workflows/: c-cpp.yml
Linux/: HistoricalMap.desktop.in
Windows/: HistoricalMap.exe.manifest  resource.rc
assets/: HistoricalMap.desktop.in  resource.rc
cmake/: GeneratePoFile.cmake  GetArchitecture.cmake  PotFileToPoFile.cmake  TagVersion.cmake
locale/zh_CN.UTF-8/: presentation.po  translation.po  ui.po
script/: DebianPostinst.sh.in  DebianPrerm.sh.in  processPoFile.ps1
src/: CMakeLists.txt  Tile.cpp  Tile.h  TileSource.h  TileSourceUrl.cpp  TileSourceUrl.h
src/logger/: CMakeLists.txt  GuiSink.cpp  GuiSink.h  LogModelInterface.h  LogWidgetInterface.h  LoggerManager.cpp  LoggerManager.h  ModelSink.cpp  ModelSink.h  ModuleLogger.h  StringSink.cpp  StringSink.h  Util.h
src/model/: CMakeLists.txt  CacheModel.cpp  CacheModel.h  DatabaseModel.cpp  DatabaseModel.h  DynamicInfoModel.cpp  DynamicInfoModel.h  ExportModel.cpp  ExportModel.h  ImportModel.cpp  ImportModel.h  LogModel.cpp  LogModel.h  TileModel.cpp  TileModel.h  Util.cpp  Util.h
src/persistence/: CMakeLists.txt  Data.h  DataCache.cpp  DataCache.h  Database.h  DatabaseManager.cpp  DatabaseManager.h  Ddl2SqlCommands.py  ExportImportProcessor.cpp  ExportImportProcessor.h  HistoricalCache.cpp  HistoricalCache.h  HistoricalStorage.cpp  HistoricalStorage.h  InitializeDB.sql  JsonFileHandler.cpp  JsonFileHandler.h  Persistence.h  PersistenceManager.cpp  PersistenceManager.h  Selector.cpp  Selector.h  Table.sql  db.ddl  db.sql  ddl2SqlCommands.py  jsonSchema.json
src/persistence/exporterImporter/: BsonExporterImporter.cpp  BsonExporterImporter.h  ExportManager.cpp  ExportManager.h  ExporterImporterFactory.h  ExporterImporterRegistrar.h  ExporterImporterRegistration.cpp  IExporterImporter.cpp  IExporterImporter.h  ImportManager.cpp  ImportManager.h  JsonExporterImporter.cpp  JsonExporterImporter.h  Util.h  jsonSchema.json
src/presentation/: CMakeLists.txt  DatabaseAccessPresenter.cpp  DatabaseAccessPresenter.h  DatabaseSaverPresenter.cpp  DatabaseSaverPresenter.h  DatabaseYearPresenter.cpp  DatabaseYearPresenter.h  ExportPresenter.cpp  ExportPresenter.h  HistoricalInfoPresenter.cpp  HistoricalInfoPresenter.h  HistoricalInfoWidgetInterface.h  ImportPresenter.cpp  ImportPresenter.h  ImportYearPresenter.cpp  ImportYearPresenter.h  InfoSelectorPresenter.cpp  InfoSelectorPresenter.h  InfoWidgetPresenter.cpp  InfoWidgetPresenter.h  LogPresenter.cpp  LogPresenter.h  LogWidgetInterface.h  MainViewInterface.h  MainViewPresenter.cpp  MainViewPresenter.h  MapWidgetInterface.h  MapWidgetPresenter.cpp  MapWidgetPresenter.h  TileSourceUrlPresenter.cpp  TileSourceUrlPresenter.h  TileSourceWidgetPresenter.h  Util.h
src/stbImageImpl/: CMakeLists.txt
src/tile/: CMakeLists.txt  RasterTileEngine.cpp  RasterTileEngine.h  StbImageImpl.cpp  Tile.cpp  Tile.h  TileEngine.h  TileEngineFactory.cpp  TileEngineFactory.h  TileLoader.cpp  TileLoader.h  TileSource.h  TileSourceUrl.cpp  TileSourceUrl.h  Util.cpp  Util.h  util.cpp  util.h
src/ui/: CMakeLists.txt  CountryInfoWidget.cpp  CountryInfoWidget.h  DefaultInfoWidget.cpp  DefaultInfoWidget.h  ExportImportWidget.cpp  ExportImportWidget.h  ExportInfoWidget.cpp  ExportInfoWidget.h  ExportWidget.cpp  ExportWidget.h  HistoricalInfoWidget.cpp  HistoricalInfoWidget.h  HistoricalMap.cpp  HistoricalMap.h  IInfoWidget.cpp  IInfoWidget.h  ITileSourceWidgetDetail.h  ImportInfoWidget.cpp  ImportInfoWidget.h  ImportWidget.cpp  ImportWidget.h  LogWidget.cpp  LogWidget.h  MapPlot.cpp  MapPlot.h  MapWidget.cpp  MapWidget.h  MapWidgetNoninteractive.cpp  MapWidgetNoninteractive.h  TileSourceUrlWidget.cpp  TileSourceUrlWidget.h  TileSourceWidget.cpp  TileSourceWidget.h  Util.cpp  Util.h  util.cpp  util.h
src/util/: Cache.h  Error.h  ExecuteablePath.h  Generator.h  Index.h  Signal.h  TypeTraits.h  Windows.h  Worker.h
test/: CMakeLists.txt
test/persistence/: BsonExporterImporterTest.cpp  CMakeLists.txt  DatabaseTest.cpp  ExportImportProcessorTest.cpp  JsonExporterImporterTest.cpp  JsonFileHandlerTest.cpp  PersistenceTest.cpp  incorrectJson.json
test/util/: CMakeLists.txt  SignalTest.cpp  TypeTraitsTest.cpp
